--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2018"
 
 [dependencies]
 yew = "0.18"
+patternfly-yew = "0.0.26"
 web-sys = "0.3.52"
 anyhow = "1.0"
 
 num-traits = "0.2"
 serde_json = "1.0.66"
+plotters = {version = "0.3", features = ["line_series", "datetime"] }
+plotters-canvas = "0.3"
+chrono = "0.4"
