--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ yew = "0.18"
 patternfly-yew = "0.0.26"
 web-sys = "0.3.52"
 anyhow = "1.0"
+rand = "0.8"
 
 num-traits = "0.2"
 serde_json = "1.0.66"
